$Id$

2017-11-04  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.conf.5.in: Shorten or remove info about
	very old 3ware controllers.

	smartctl.8.in: Add '-g' to '-x' documentation.
	Avoid a very long line.

	smartctl.cpp: Improve help text formatting.

2017-11-03  Christian Franke  <franke@computer.org>

	update-smart-drivedb.8.in: Update mailing list link.
	update-smart-drivedb.in: Update mailing list comment.

	utility.cpp: Silence g++ 7.1 -Wformat-truncation warning.

	atacmds.cpp, dev_areca.cpp, os_linux.cpp: Add comments to silence
	g++ 7.1 -Wimplicit-fallthrough=[1-4] warnings.

	os_linux.cpp: Fix indentation (g++ 6.3: -Wmisleading-indentation).

	nvmeprint.cpp: Print IEEE EUI-64 of namespace.

2017-10-29  Christian Franke  <franke@computer.org>

	smartctl.8.in: Add notes about SMART commands obsoleted in ACS-4.
	Remove some outdated info.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe sections
	for Darwin.

	os_win32/installer.nsi: Update links.
	Remove outdated uninstall commands.

	INSTALL: Update ./configure description and OS info.

	ataidentify.cpp, ataprint.cpp: Minor ACS-4 additions.

	ataprint.cpp, ataprint.h, smartctl.cpp: Add option '-l defects'
	to print ATA ACS-4 Pending Defects log (ticket #909).
	smartctl.8.in: Document '-l defects'.

2017-10-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung based SSDs: PM871b (tickets #895, #903)
	- Seagate Enterprise Capacity 3.5 HDD: 4TB (fix for #913)
	- Western Digital Red Pro: 6TB (ticket #785)

	os_win32/smartd_warning.cmd: Add ability to run PowerShell scripts
	with '-M exec'.
	smartd.conf.5.in: Document new functionality.  Fix typo.

2017-10-25  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - add SATA Voyager GTX (#893)

2017-10-24  Christian Franke  <franke@computer.org>

	do_release: Update code signing key id.

	update-smart-drivedb.in: Add new mailing list address to database
	signing key.

2017-10-24  Alex Samorukov <samm@os2.kiev.ua>
