@@ -127,8 +127,8 @@ Section below!
 # may become common with SATA disks in SAS and FC
 # environments.
 /dev/sda \-a \-d sat
-#
 .\" %IF OS Linux
+#
 # Three disks connected to a MegaRAID controller
 # Start short self\-tests daily between 1\-2, 2\-3, and
 # 3\-4 am.
@@ -143,11 +143,13 @@ Section below!
 /dev/sda \-d aacraid,0,0,66 \-a \-s S/../.././01
 /dev/sda \-d aacraid,0,0,67 \-a \-s S/../.././02
 /dev/sda \-d aacraid,0,0,68 \-a \-s S/../.././03
-#
 .\" %ENDIF OS Linux
+.\" %IF OS FreeBSD Linux
+#
 # Two SATA (not SAS) disks on a 3ware 9750 controller.
 # Start long self\-tests Sundays between midnight and
 # 1 am and 2\-3 am
+.\" %ENDIF OS FreeBSD Linux
 .\" %IF OS Linux
 # under Linux
 /dev/twl0 \-d 3ware,0 \-a \-s L/../../7/00
@@ -158,10 +160,12 @@ Section below!
 /dev/tws0 \-d 3ware,0 \-a \-s L/../../7/00
 /dev/tws0 \-d 3ware,1 \-a \-s L/../../7/02
 .\" %ENDIF OS FreeBSD
+.\" %IF OS FreeBSD Linux
 #
 # Three SATA disks on a HighPoint RocketRAID controller.
 # Start short self\-tests daily between 1\-2, 2\-3, and
 # 3\-4 am.
+.\" %ENDIF OS FreeBSD Linux
 .\" %IF OS Linux
 # under Linux
 /dev/sde \-d hpt,1/1 \-a \-s S/../.././01
@@ -174,10 +178,12 @@ Section below!
 /dev/hptrr \-d hpt,1/2 \-a \-s S/../.././02
 /dev/hptrr \-d hpt,1/3 \-a \-s S/../.././03
 .\" %ENDIF OS FreeBSD
+.\" %IF OS FreeBSD Linux
 #
 # Two SATA disks connected to a HighPoint RocketRAID
 # via a pmport device.  Start long self\-tests Sundays
 # between midnight and 1 am and 2\-3 am.
+.\" %ENDIF OS FreeBSD Linux
 .\" %IF OS Linux
 # under Linux
 /dev/sde \-d hpt,1/4/1 \-a \-s L/../../7/00
@@ -187,39 +193,33 @@ Section below!
 # under FreeBSD
 /dev/hptrr \-d hpt,1/4/1 \-a \-s L/../../7/00
 /dev/hptrr \-d hpt,1/4/2 \-a \-s L/../../7/02
-#
 .\" %ENDIF OS FreeBSD
-# Two SATA disks on an Intelliprop controller.
-# Start short self\-tests daily between 1\-2, 2\-3, and
-# 3\-4 am.
-.\" %IF OS Linux
-# under Linux
-/dev/sde \-d intelliprop,0+sat \-a \-s S/../.././01
-/dev/sde \-d intelliprop,1+sat \-a \-s S/../.././02
-.\" %ENDIF OS Linux
-# Four SATA disks on an Intelliprop controller.
-# Start long self\-tests daily between 1\-2, 2\-3,
-# 3\-4, and 4\-5 am.
-.\" %IF OS Linux
-# under Linux
-/dev/sde \-d intelliprop,0+sat \-a \-s L/../.././01
-/dev/sde \-d intelliprop,1+sat \-a \-s L/../.././02
-/dev/sde \-d intelliprop,2+sat \-a \-s L/../.././03
-/dev/sde \-d intelliprop,3+sat \-a \-s L/../.././04
-.\" %ENDIF OS Linux
+.\" %IF OS FreeBSD Linux
+#
 # Three SATA disks connected to an Areca
 # RAID controller.  Start long self\-tests Sundays
 # between midnight and 3 am.
+.\" %ENDIF OS FreeBSD Linux
 .\" %IF OS Linux
+# under Linux
 /dev/sg2 \-d areca,1 \-a \-s L/../../7/00
 /dev/sg2 \-d areca,2 \-a \-s L/../../7/01
 /dev/sg2 \-d areca,3 \-a \-s L/../../7/02
 .\" %ENDIF OS Linux
 .\" %IF OS FreeBSD
+# under FreeBSD
 /dev/arcmsr0 \-d areca,1 \-a \-s L/../../7/00
 /dev/arcmsr0 \-d areca,2 \-a \-s L/../../7/01
 /dev/arcmsr0 \-d areca,3 \-a \-s L/../../7/02
 .\" %ENDIF OS FreeBSD
+.\" %IF OS Linux
+#
+# Two SATA disks on an Intelliprop controller.
+# Start short self\-tests daily between 1\-2, 2\-3, and
+# 3\-4 am.
+/dev/sde \-d intelliprop,0+sat \-a \-s S/../.././01
+/dev/sde \-d intelliprop,1+sat \-a \-s S/../.././02
+.\" %ENDIF OS Linux
 #
 # The following line enables monitoring of the
 # ATA Error Log and the Self\-Test Error Log.
