@@ -2,6 +2,8 @@ $Id$
 
 2017-11-04  Christian Franke  <franke@computer.org>
 
+	smartd.conf.5.in: Fix conditionals of platform specific samples.
+
 	smartctl.8.in, smartd.conf.5.in: Shorten or remove info about
 	very old 3ware controllers.
 
